More content and whatever

--- a/app/src/main/res/xml/provider_paths.xml
+++ b/app/src/main/res/xml/provider_paths.xml
@@ -4,4 +4,8 @@
         name="apks"
         path="."
         />
+    <external-cache-path
+        name="apks_external"
+        path="."
+        />
 </paths>
