--- a/app/src/main/res/xml/main.xml
+++ b/app/src/main/res/xml/main.xml
@@ -65,4 +65,41 @@
 
     </PreferenceCategory>
 
+    <PreferenceCategory
+        android:title="@string/more"
+        android:key="category_more">
+
+        <tk.zwander.oneuituner.util.LinkPreference
+            android:title="@string/twitter"
+            android:key="twitter"
+            android:icon="@drawable/twitter"
+            app:link="https://twitter.com/wander1236"
+            />
+
+        <tk.zwander.oneuituner.util.LinkPreference
+            android:title="@string/github"
+            android:key="github"
+            android:icon="@drawable/github"
+            app:link="https://github.com/zacharee"
+            />
+
+        <tk.zwander.oneuituner.util.LinkPreference
+            android:title="@string/website"
+            android:key="website"
+            android:icon="@drawable/ic_baseline_web_24"
+            app:link="https://zwander.dev"
+            />
+
+        <tk.zwander.oneuituner.util.LinkPreference
+            android:title="@string/patreon"
+            android:key="patreon"
+            android:icon="@drawable/patreon"
+            app:link="https://patreon.com/zacharywander"
+            />
+
+        <tk.zwander.patreonsupportersretrieval.ui.SupporterDialogPreference
+            />
+
+    </PreferenceCategory>
+
 </PreferenceScreen>
