--- a/app/src/main/res/xml/misc.xml
+++ b/app/src/main/res/xml/misc.xml
@@ -9,20 +9,34 @@
         android:defaultValue="@bool/old_recents_default"
         />
 
+    <SwitchPreference
+        android:title="@string/adjust_nav_bar_size"
+        android:key="adjust_nav_height"
+        android:defaultValue="false"
+        />
+
     <tk.zwander.seekbarpreference.SeekBarPreference
         android:title="@string/nav_height"
         android:key="nav_height"
         android:defaultValue="@integer/nav_height_unscaled_default"
+        android:dependency="adjust_nav_height"
         app:scale="0.1"
         app:units="dp"
         app:minValue="@integer/nav_height_min"
         app:maxValue="@integer/nav_height_max"
         />
 
+    <SwitchPreference
+        android:title="@string/adjust_status_bar_size"
+        android:key="adjust_status_height"
+        android:defaultValue="false"
+        />
+
     <tk.zwander.seekbarpreference.SeekBarPreference
         android:title="@string/status_bar_height"
         android:key="status_bar_height"
         android:defaultValue="@integer/status_bar_height_unscaled_default"
+        android:dependency="adjust_status_height"
         app:scale="0.1"
         app:units="dp"
         app:minValue="@integer/status_bar_height_min"
